--- a/html-basic/hello.html
+++ b/html-basic/hello.html
@@ -2,9 +2,15 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="author" content="hwasung Lee">
 		<title>hello, world!!</title>
 	</head>
 	<body>
-		<p>Hello, world!!</title>
+		<p>Hello, world!!</p>
+		<h1>h1 Hello, world!!</h1>
+		<h2>h2 Hello, world!!</h2>
+		<h3>h3 Hello, world!!</h3>
+		<h4>h4 Hello, world!!</h4>
+		<a href="https://www.duckduckgo.com">duck</a>
 	</body>
 </html>
