modified:   hello.html

--- a/html-basic/hello.html
+++ b/html-basic/hello.html
@@ -11,6 +11,27 @@
 		<h2>h2 Hello, world!!</h2>
 		<h3>h3 Hello, world!!</h3>
 		<h4>h4 Hello, world!!</h4>
-		<a href="https://www.duckduckgo.com">duck</a>
+		<h5>h5 Hello, world!!</h5>
+		<h6>h6 Hello, world!!</h6>
+		<p>Browser lists</p>
+		<p>li tag</p>
+		<ul>
+			<li>Google Chrome</li>
+			<li><b>Mozilla FireFox</b></li>
+			<li>Microsoft Edge</li>
+		</ul>
+		<p>ol tag</p>
+		<ol>
+			<li>Google Chrome</li>
+			<li><b>Mozilla FireFox</b></li>
+			<li>Microsoft Edge</li>
+		</ol>
+		<p><em>I am Emphasis(em tag)</em></p>
+		<p><strong>I am strong(strong tag)</strong></p>
+		<p><i>I am italic</i><p>
+		<p><b>I am bold</b></p>
+		<p><u>I am underline</u><p>
+	
+		<a href="https://www.duckduckgo.com" title="great search engine">duck</a>
 	</body>
 </html>
